<resources>
    <string name="app_name">Project_SDO</string>
    <string name="listviewdrug">Cefixim 100mg</string>
    <string name="gia">129.000</string>
    <string name="drugstorename">Drug Store</string>
    <string name="home_description">Tác dụng phụ thận trọng liều lượng</string>
    <string name="home_post_date">Post Date: 1-1-2017</string>
    <string name="home">Home</string>
    <string name="drug">Drug</string>
    <string name="chat">Chat</string>
    <string name="user">User</string>
    <string name="uses">Uses</string>
    <string name="dangky_username">Username</string>
    <string name="dangky_pass">Password</string>
    <string name="dangky_re_pass">Re-Password</string>
    <string name="dangky_adress">Address</string>
    <string name="dangky_cmnd">CMND</string>
    <string name="dangky_drugstore">Drug Store</string>
    <string name="dangky_vehicel">Vehicel Code</string>
    <string name="dangky_transported">The airline Transported</string>
    <string name="dangky_phone">Phone Number</string>.
    <string name="soxe">Vehicle Code: </string>
    <string name="order">Order </string>
    <string name="adress">Address : </string>
    <string name="customerphone">Phone Number : </string>
    <array name="TypeAccount">
        <item name="account_user">User</item>
        <item name="account_seller">Seller</item>
        <item name="account_shipper">Shipper</item>
        <item name="account_carrier">Carrier</item>
    </array>
    <string name="dangky_ok">Ok</string>
    <string name="dangky_cancel">Cancel</string>
    <string name="dangnhap_username">Username</string>
    <string name="dangnhap_pass">Password</string>
    <string name="dangnhap_singin">Sign In</string>
    <string name="dangnhap_cancel">Cancel</string>
    <string name="content">Bên cạnh những sai sót do trách nhiệm của hệ thống y tế hoặc các nhân viên y tế, việc dùng thuốc không đúng của người bệnh do vô tình hay hữu ý cũng là một trong những nguyên nhân rất quan trọng góp phần vào các sai sót trong dùng thuốc. Một số sai sót có thể đến do các hành động không an toàn, không tuân thủ đúng các qui trình và thủ tục (thường để tiết kiệm thời gian và công việc), ví dụ như việc lấy sẵn các thuốc ra khỏi vỏ để tiện dùng hoặc trộn lẫn nhiều thứ thuốc với nhau để uống 1 lần. Bệnh nhân cũng có thể góp phần gây ra các sai sót trong dùng thuốc do không tuân thủ các hướng dẫn dùng thuốc của thầy thuốc như tự ý dùng thêm thuốc, tăng liều hoặc giảm liều thuốc... Một nghiên cứu gần đây ở Mỹ cho thấy, hầu hết các bệnh nhân lớn tuổi đã dùng các thuốc của mình không đúng hướng dẫn của thầy thuốc trong 20 - 60% thời gian điều trị tại nhà.</string>
    <string name="register_signin">Sign In</string>
    <string name="register_signup">Sign Up</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="shoppingcart_continue">Continue</string>
    <string name="shoppingcart_order">Order</string>
    <string name="price_shoppingcart_back">.000 Đ</string>
    <string name="price_shoppingcart_front">129</string>
    <string name="amount_number_shopping_cart">1</string>

    <string name="cefixim">Cefixim</string>
    <string name="drug_store">Drug store : APA</string>
    <string name="user_text">Kháng sinh, Tang sức đề kháng, điều trị nhiễm khuẩn</string>
    <string name="sources_text">Nhãn hiệu nước ngoài, được nhập từ nước Mỹ</string>
    <string name="description_text">Liều trị là 1 gói 1 lần. Vào buổi sáng và buổi trưa</string>
    <string name="gia_ctthuoc">129.000d/1 hộp</string>
    <string name="sources">Sources</string>
    <string name="description">Description</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Sale Statistic -->
    <array name="TypeDate">
        <item name="account_user">Ngày</item>
        <item name="account_seller">Tháng</item>
        <item name="account_shipper">Năm</item>
    </array>

    <string name="amount">Amount: </string>
    <string name="sale_date">Day: 1-1-2017</string>
</resources>
