<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.quang.project_sdo.SellerSignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="center">
    <EditText
        android:id="@+id/edtEmail"
        style="@style/dangkyEditTextStyle"
        android:drawableLeft="@drawable/mail"
        android:drawableStart="@drawable/mail"
        android:hint="@string/dangky_username" />

    <EditText
        android:id="@+id/edtPassword"
        style="@style/dangkyEditTextStyle"
        android:drawableLeft="@drawable/key"
        android:drawableStart="@drawable/key"
        android:hint="@string/dangky_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtRePass"
        style="@style/dangkyEditTextStyle"
        android:hint="@string/dangky_re_pass"
        android:drawableLeft="@drawable/key"
        android:drawableStart="@drawable/key"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtAddress"
        style="@style/dangkyEditTextStyle"
        android:drawableLeft="@drawable/location"
        android:drawableStart="@drawable/location"
        android:hint="@string/dangky_adress" />

    <EditText
        android:id="@+id/edtPhone"
        style="@style/dangkyEditTextStyle"
        android:hint="@string/dangky_phone"
        android:drawableLeft="@drawable/phone"
        android:drawableStart="@drawable/phone"
        android:inputType="number" />
    <EditText
        android:id="@+id/edtCMND"
        style="@style/dangkyEditTextStyle"
        android:hint="@string/dangky_cmnd"
        android:drawableLeft="@drawable/cmnd"
        android:drawableStart="@drawable/cmnd"
        android:inputType="number" />
    <EditText
        android:id="@+id/edtDrugStore"
        style="@style/dangkyEditTextStyle"
        android:hint="@string/dangky_drugstore"
        android:drawableLeft="@drawable/drugstore"
        android:drawableStart="@drawable/drugstore"
        android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOKSe"
            style="@style/dangkyButtonStyle"
            android:text="@string/dangky_ok" />

        <Button
            android:id="@+id/btnCancelSe"
            style="@style/dangkyButtonStyle"
            android:layout_marginLeft="50dp"
            android:text="@string/dangky_cancel" />
    </LinearLayout>
</LinearLayout>
