<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.quang.project_sdo.CarriersSignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmail"
            style="@style/dangkyEditTextStyle"
            android:drawableLeft="@drawable/mail"
            android:drawableStart="@drawable/mail"
            android:hint="@string/dangky_username" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/dangkyEditTextStyle"
            android:drawableLeft="@drawable/key"
            android:drawableStart="@drawable/key"
            android:hint="@string/dangky_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtRePass"
            style="@style/dangkyEditTextStyle"
            android:drawableLeft="@drawable/key"
            android:drawableStart="@drawable/key"
            android:hint="@string/dangky_re_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtAddress"
            style="@style/dangkyEditTextStyle"
            android:drawableLeft="@drawable/location"
            android:drawableStart="@drawable/location"
            android:hint="@string/dangky_adress" />

        <EditText
            android:id="@+id/edtPhone"
            style="@style/dangkyEditTextStyle"
            android:drawableLeft="@drawable/phone"
            android:drawableStart="@drawable/phone"
            android:hint="@string/dangky_phone"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtCMND"
            style="@style/dangkyEditTextStyle"
            android:drawableLeft="@drawable/phone"
            android:drawableStart="@drawable/phone"
            android:hint="@string/dangky_cmnd"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtCarrier"
            style="@style/dangkyEditTextStyle"
            android:drawableLeft="@drawable/phone"
            android:drawableStart="@drawable/phone"
            android:hint="Tên hãng"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOKCa"
            style="@style/dangkyButtonStyle"
            android:text="@string/dangky_ok" />

        <Button
            android:id="@+id/btnCancelCa"
            style="@style/dangkyButtonStyle"
            android:layout_marginLeft="50dp"
            android:text="@string/dangky_cancel" />
    </LinearLayout>

</LinearLayout>
