<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".UserSignUpActivity">

    <EditText
        android:id="@+id/edtEmail"
        style="@style/dangkyEditTextStyle"
        android:drawableLeft="@drawable/mail"
        android:drawableStart="@drawable/mail"
        android:hint="@string/dangky_username" />

    <EditText
        android:id="@+id/edtPassword"
        style="@style/dangkyEditTextStyle"
        android:drawableLeft="@drawable/key"
        android:drawableStart="@drawable/key"
        android:hint="@string/dangky_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtRePass"
        style="@style/dangkyEditTextStyle"
        android:hint="@string/dangky_re_pass"
        android:drawableLeft="@drawable/key"
        android:drawableStart="@drawable/key"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edtAddress"
        style="@style/dangkyEditTextStyle"
        android:drawableLeft="@drawable/location"
        android:drawableStart="@drawable/location"
        android:hint="@string/dangky_adress" />

    <EditText
        android:id="@+id/edtPhone"
        style="@style/dangkyEditTextStyle"
        android:hint="@string/dangky_phone"
        android:drawableLeft="@drawable/phone"
        android:drawableStart="@drawable/phone"
        android:inputType="number" />

</LinearLayout>