<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgCefixim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_cefixim" />

        <TextView
            android:id="@+id/txtCefixim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cefixim"
            android:textColor="@color/colorDo"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtDrugStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drug_store"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:text="@string/user_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sources"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:text="@string/sources_text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:text="@string/description_text"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gia_ctthuoc"
            android:textColor="@color/colorDo"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnChat"
            style="@style/shoppingcartButtonStyle"
            android:drawableLeft="@drawable/play"
            android:drawablePadding="5dp"
            android:text="@string/chat" />

        <Button
            android:id="@+id/btnOrder"
            style="@style/shoppingcartButtonStyle"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/order"
            android:drawablePadding="10dp"
            android:text="@string/order" />

    </LinearLayout>
</LinearLayout>
