<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgHomeDrug"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="3"
        android:src="@drawable/img_cefixim" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/txtHomeDrugName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listviewdrug"
            android:textColor="@color/colorDen"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/txtHomeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="1dp"
            android:paddingTop="7dp"
            android:text="@string/home_description"
            android:textColor="@color/colorDo"
            android:textSize="17dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtHomeImagePostDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/homeclock"></TextView>

            <TextView
                android:id="@+id/txtHomePostDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/home_post_date"
                android:textColor="@color/colorDen"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>