<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/imgDrug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_cefixim" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/txtNameDrugSale"
            style="@style/Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listviewdrug"
            android:textColor="@color/colorDen"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:src="@drawable/price_shopping_cart" />

            <TextView
                android:id="@+id/txtGiaSale"
                style="@style/paddingLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/gia"
                android:textColor="@color/colorDo"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="7dp">

            <TextView

                style="@style/Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/colorXam" />

            <TextView
                android:id="@+id/txtAmount"
                style="@style/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="@color/colorXam"

                />

        </LinearLayout>
        <TextView
            android:id="@+id/txtpostDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           style="@style/daySale"
            android:textStyle="normal" />



    </LinearLayout>


        <ImageButton
            android:id="@+id/imgShopCart"
            style="@style/paddingRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/trang"
            android:paddingTop="20dp"
            android:src="@drawable/cart" />




</LinearLayout>